Phase 3: Add shopping card.

--- a/UsedCars.Web/client-app/src/App.css
+++ b/UsedCars.Web/client-app/src/App.css
@@ -24,3 +24,11 @@ html, body {
     justify-content: center;
     align-items: center;
 }
+
+.shopping-card-preview {
+    display: flex;
+}
+
+.MuiButtonBase-root.MuiChip-root {
+    margin-left: auto;
+}
